ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18/input.ts.stderr
error: Rest pattern is not allowed in setter
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18/input.ts:3:12
  |
3 |    set Foo(...a) { }
  |            ^^^^

